Changes made between Gamera File Releases
=========================================

 - toolkits now compile out-of-the box again on Ubuntu

 - classifier menu entry "Image/Save glyphs into separate files" now works

 - new plugin segmentation_error (category "PageSegmentation")

 - ProgressFactory now has optional constructor argument
   "numsteps" for doing the update only in *numsteps* discrete steps
   (used for significantly speeding up loading/saving XML files)

 - group_[and_update]_list_automatic() now has an optional
   argument "criterion" for chosing the way how the best
   grouping is chosen. The old method was "avg", while the new
   default is "min", because we have found this to be better in our tests.


Version 3.2.6, Jun 08, 2010
----------------------------

 - plugin args Class, ImageList, and Pixel now support
   default value NoneDefault

 - new plugin graph_color_ccs (category "Color")

 - new plugin contour_samplepoints (category "Analysis/Contour")

 - new plugin delaunay_from_points (category "Geometry")
   for Delaunay triangulation

 - fixed bug in runlength smearing that could split smeared lines


Version 3.2.5, Apr 14, 2010
----------------------------

 - CIE L*a*b* values can be queried from RGBPixels

 - new plugin trim_image (category "Utilities")

 - new plugins kfill and kfill_modified (category "Filter")

 - rank and mean now allow larger window sizes than 3x3
   and an optional border treatment (clip or reflect)

 - runlength_smearing and projection_cutting now also work
   on views with non zero offset

 - computation of some features corrected:
    o nholes (white rows/cols made whole count negative)
    o nholes_extended (normalization for scale invariance was missing)
    o compactness (border pixels were formerly ignored in computation)
    o skeleton_features (crossings through x/y-axis was erronously computed)
    o volume[16|64]regions (zones occasionally not covered entire images)